--- a/style.css
+++ b/style.css
@@ -99,13 +99,13 @@ html{
 
 #periodicTable{
     font-family: 'Poppins', sans-serif;;
-    height: 100vh;
+    height: 120vh;
 }
 
 #periodicTable #mesa{
     display: flex;
     width: 100vw;
-    height: 100vh;
+    height: 120vh;
     align-items: center;
     justify-content: center;
 }
@@ -155,6 +155,8 @@ html{
 .solido{ color: var(--solido);}
 .liquido{ color: var(--liquido);}
 .gas{ color: var(--gas);}
+.lantanideo{background-color: var(--lantanideos) !important;}
+.actinideo{background-color: var(--actinideos) !important;}
 
 #periodicTable td.numeroposicao{
     box-shadow: 0px 0px 0px transparent;
