--- a/style.css
+++ b/style.css
@@ -162,8 +162,6 @@ html{
     box-shadow: 0px 0px 0px transparent;
 }
 
-
-
 #periodicTable .familias{
     justify-content: space-around;
     text-align: center;
@@ -210,3 +208,23 @@ input[type="text"]{
     text-align: center;
 }
 
+.curiosidades{
+    font-size: 10px;
+    width: 350px;
+    background-color: aqua;
+   display: flex;
+    margin: auto;
+    height: 50vh;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    top: 25vh;
+    left: 35vw;
+    position: fixed;
+    display: none;
+}
+
+.fechar{
+  display: flex;
+  justify-items: right;
+}
