--- a/style.css
+++ b/style.css
@@ -228,3 +228,11 @@ input[type="text"]{
   display: flex;
   justify-items: right;
 }
+
+#invisivel{
+    background-color: transparent;
+    height: 100vh;
+    width: 1000vw;
+    display: none;
+    position: absolute;
+}
