--- a/style.css
+++ b/style.css
@@ -209,30 +209,57 @@ input[type="text"]{
 }
 
 .curiosidades{
-    font-size: 10px;
-    width: 350px;
-    background-color: aqua;
-   display: flex;
+    border-radius: 10px;
+    text-align: left;
+    font-size: 18px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
     margin: auto;
     height: 50vh;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
+    width: 500px;
     top: 25vh;
-    left: 35vw;
+    left: calc(50vw - 250px);
     position: fixed;
     display: none;
 }
+.curiosidades div{
+    border-radius: 8px 8px 0px 0px;
+    background-color: black;
+    color: white;
+    padding-bottom: 35px;
+}
 
+.popTitulo{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+}
+.popInfo{
+    font-weight: 300;
+    margin: 20px 40px;
+}
+.xbar{
+    width: 480px;
+    text-align: end;
+}
 .fechar{
-  display: flex;
-  justify-items: right;
+    color: white;
+    background-color: black;
+    text-align: center;
+    border: 0px;
+    padding: 5px;
+    font-size: 18px;
+    font-weight: 900;
+    font-family: var(--font-pop);
+    cursor: pointer;
+}
+.fechar:hover{
+    background-color: rgb(56, 56, 56);
 }
 
 #invisivel{
-    background-color: transparent;
     height: 100vh;
-    width: 1000vw;
+    width: 100vw;
     display: none;
     position: absolute;
 }
