--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
 }
 
 html{
-    overflow-x :hidden;    
     scroll-behavior: smooth;
 }
 
@@ -281,4 +280,57 @@ input[type="text"]{
 .massaAtomica{
     text-align: center;
     font-size: 12px;
+}
+
+@media (max-width: 1500px) {
+    #backdropfilter{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #bunnerTittle1{
+        line-height: 70%;
+        font-size: 110px;
+        text-align: center;
+    }
+    
+    #bunnerTittle2{
+        font-size: 55px;
+        text-align: center;
+    }
+
+    #periodicTable #mesa{
+        overflow: hidden;
+        display: flex;
+        width: 100vw;
+        overflow-x: scroll;
+        justify-content: flex-start;
+    }
+
+}
+@media (max-width: 500px) {
+    #bunnerTittle1{
+        font-size: 90px;
+        text-align: center;
+    }
+    
+    #bunnerTittle2{
+        font-size: 35px;
+        text-align: center;
+    }
+
+}
+
+@media (max-width: 430px) {
+
+    #bunnerTittle1{
+        font-size: 60px;
+        text-align: center;
+    }
+    
+    #bunnerTittle2{
+        font-size: 25px;
+        text-align: center;
+    }
+
 }
