--- a/style.css
+++ b/style.css
@@ -310,15 +310,14 @@ input[type="text"]{
     }
 
     td{
-        max-width: 50px;
-        max-height: 50px;
-        width: 50px;
-        height: 50px;
+        max-width: 70px;
+
     }
 
 }
 @media (max-width: 500px) {
     .curiosidades{
+        left: 5vw;
         position: fixed;
         width: 90vw;
         left: calc(50vw - 200px);
