--- a/style.css
+++ b/style.css
@@ -105,13 +105,14 @@ html{
 
 #periodicTable{
     font-family: 'Poppins', sans-serif;
-    height: 120vh;
+    height: 120%;
 }
 
 #periodicTable #mesa{
     display: flex;
     width: 100vw;
-    height: 120vh;
+    height: 120%;
+    padding-bottom: 10vh;
     align-items: center;
     justify-content: center;
 }
