--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ html{
     background-image: linear-gradient(to bottom, transparent, rgb(0, 63, 158));
     height: 5vh;
     width: 100%;
+    z-index: -1;
 }
 
 #periodicTable{
