--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     user-select: none;
 }
 
